--- a/dosagecount predict.ipynb
+++ b/dosagecount predict.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv(r'C:\\Users\\Grapes\\Desktop\\MedProject\\medicineprediction\\send\\DoseStructure.csv')"
+    "df = pd.read_csv(r'C:\DoseStructure.csv')"
    ]
   },
   {
@@ -912,7 +912,7 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "filename = (r'C:\\Users\\Grapes\\Desktop\\MedProject\\medicineprediction\\send\\finalized_model.sav.sav')\n",
+    "filename = (r'finalized_model.sav')\n",
     "pickle.dump(clf, open(filename, 'wb'))"
    ]
   },
@@ -923,7 +923,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " filename =  (r'C:\\Users\\Grapes\\Desktop\\MedProject\\medicineprediction\\send\\finalized_model.sav.sav')\n",
+    " filename =  (r'finalized_model.sav')\n",
     "loaded_model = pickle.load(open(filename, 'rb'))"
    ]
   },
